[gd_scene load_steps=6 format=3 uid="uid://cm5m2eeh8beyw"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_fx47x"]
[ext_resource type="Texture2D" uid="uid://ccy4tqpadf6sf" path="res://player/5EicSM.png" id="2_qx2ui"]
[ext_resource type="Texture2D" uid="uid://ctujscy4fnuad" path="res://icon.svg" id="3_arubv"]
[ext_resource type="Texture2D" uid="uid://bcjf5161sgo0g" path="res://scenes/panel_1.png" id="5_k1tnt"]
[ext_resource type="PackedScene" uid="uid://c23knbyhgwg8j" path="res://HUD.tscn" id="5_rvfc7"]

[node name="Note2D" type="Node2D"]
script = ExtResource("1_fx47x")

[node name="PointA" type="Sprite2D" parent="."]
position = Vector2(532, 381)
scale = Vector2(0.116105, 0.097473)
texture = ExtResource("2_qx2ui")

[node name="PointB" type="Sprite2D" parent="."]
position = Vector2(780, 149)
scale = Vector2(0.133895, 0.117329)
texture = ExtResource("2_qx2ui")

[node name="PointC" type="Sprite2D" parent="."]
position = Vector2(272, 237)
scale = Vector2(0.122659, 0.0911552)
texture = ExtResource("2_qx2ui")

[node name="Character" type="Sprite2D" parent="."]
top_level = true
position = Vector2(574.5, 271)
scale = Vector2(0.585938, 0.40625)
texture = ExtResource("3_arubv")

[node name="PointD" type="Sprite2D" parent="."]
position = Vector2(688, 199)
scale = Vector2(0.104401, 0.0767148)
texture = ExtResource("2_qx2ui")

[node name="PointE" type="Sprite2D" parent="."]
position = Vector2(460, 198)
scale = Vector2(0.125468, 0.108303)
texture = ExtResource("2_qx2ui")

[node name="PointF" type="Sprite2D" parent="."]
position = Vector2(844, 490)
scale = Vector2(0.134831, 0.117328)
texture = ExtResource("2_qx2ui")

[node name="MoneyPopup" type="PopupPanel" parent="."]
size = Vector2i(500, 300)

[node name="PopupLabel" type="Label" parent="MoneyPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 296.0
text = "You recived coins
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPopup" type="PopupPanel" parent="."]

[node name="GameOverLabel" type="Label" parent="GameOverPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="ReturnButton" type="Button" parent="."]
offset_left = 1061.0
offset_top = 634.0
offset_right = 1226.0
offset_bottom = 687.0
rotation = -3.14089

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 71.0
offset_top = 85.0
offset_right = 111.0
offset_bottom = 125.0

[node name="Panel1" type="Sprite2D" parent="."]
position = Vector2(574, 326)
scale = Vector2(0.29974, 0.301852)
texture = ExtResource("5_k1tnt")

[node name="HUD" parent="." instance=ExtResource("5_rvfc7")]
